--- a/deployment.yaml
+++ b/deployment.yaml
@@ -9,12 +9,12 @@
 #    - cbd-services-apps-web
 #    - cbd-circuit-breaker
 #    - cbd-circuit-breaker-admin
-#    - cbd-monitoring-db
+#    - cbd-asrdisponibilidad-db
 # 2. Instancias MVs:
 #    - cbd-kong-instance
 #    - cbd-db-instance (postgreSQL instalado y configurado)
-#    - cbd-alarms-app-(a-c) (Monitoring app instalada)
-#    - cbd-monitoring-app (Monitoring app instalada y ejecutando)
+#    - cbd-alarms-app-(a-c) (asrdisponibilidad app instalada)
+#    - cbd-asrdisponibilidad-app (asrdisponibilidad app instalada y ejecutando)
 
 resources:
 # Firewall rules
@@ -74,7 +74,7 @@ resources:
     - IPProtocol: TCP
       ports: 
       - 8001
-- name: cbd-monitoring-db
+- name: cbd-asrdisponibilidad-db
   type: compute.v1.firewall
   properties:
     network: https://www.googleapis.com/compute/v1/projects/<id-proyecto>/global/networks/default
@@ -83,7 +83,7 @@ resources:
     sourceTags: 
     - cbd-services-firewall
     targetTags:
-    - cbd-monitoring-db
+    - cbd-asrdisponibilidad-db
     allowed:
     - IPProtocol: TCP
       ports: 
@@ -133,7 +133,7 @@ resources:
         type: ONE_TO_ONE_NAT
     tags:
       items: 
-      - cbd-monitoring-db
+      - cbd-asrdisponibilidad-db
     metadata:
       items:
       - key: startup-script
@@ -141,8 +141,8 @@ resources:
           #!/bin/bash
           sudo apt-get update
           sudo apt-get install -y postgresql postgresql-contrib
-          sudo -u postgres psql -c "CREATE USER monitoring_user WITH PASSWORD 'isis2503';"
-          sudo -u postgres createdb -O monitoring_user monitoring_db
+          sudo -u postgres psql -c "CREATE USER asr_user WITH PASSWORD 'isis2503';"
+          sudo -u postgres createdb -O asr_user asrdisponibilidad_db
           echo "host all all 0.0.0.0/0 trust" | sudo tee -a /etc/postgresql/12/main/pg_hba.conf
           echo "listen_addresses='*'" | sudo tee -a /etc/postgresql/12/main/postgresql.conf
           echo "max_connections=2000" | sudo tee -a /etc/postgresql/12/main/postgresql.conf
@@ -177,10 +177,10 @@ resources:
           #!/bin/bash
           sudo apt-get update
           sudo apt install python3-pip -y
-          sudo mkdir /labs
-          cd /labs
-          sudo git clone https://github.com/ISIS2503/ISIS2503-MonitoringApp.git
-          cd ISIS2503-MonitoringApp
+          sudo mkdir /asr
+          cd /asr
+          sudo git clone https://github.com/Leonardo3310/ASR-Disponibilidad
+          cd ASR-Disponibilidad
           sudo git checkout Circuit-Breaker
           sudo pip3 install -r requirements.txt
 - type: compute.v1.instance
@@ -211,10 +211,10 @@ resources:
           #!/bin/bash
           sudo apt-get update
           sudo apt install python3-pip -y
-          sudo mkdir /labs
-          cd /labs
-          sudo git clone https://github.com/ISIS2503/ISIS2503-MonitoringApp.git
-          cd ISIS2503-MonitoringApp
+          sudo mkdir /asr
+          cd /asr
+          sudo git clone https://github.com/Leonardo3310/ASR-Disponibilidad
+          cd ASR-Disponibilidad
           sudo git checkout Circuit-Breaker
           sudo pip3 install -r requirements.txt
 - type: compute.v1.instance
@@ -245,15 +245,15 @@ resources:
           #!/bin/bash
           sudo apt-get update
           sudo apt install python3-pip -y
-          sudo mkdir /labs
-          cd /labs
-          sudo git clone https://github.com/ISIS2503/ISIS2503-MonitoringApp.git
-          cd ISIS2503-MonitoringApp
+          sudo mkdir /asr
+          cd /asr
+          sudo git clone sudo git clone https://github.com/Leonardo3310/ASR-Disponibilidad
+          cd ASR-Disponibilidad
           sudo git checkout Circuit-Breaker
           sudo pip3 install -r requirements.txt
-# Monitoring app instance
+# asrdisponibilidad app instance
 - type: compute.v1.instance
-  name: cbd-monitoring-app
+  name: cbd-asrdisponibilidad-app
   properties:
     zone: us-central1-a
     machineType: https://www.googleapis.com/compute/v1/projects/<id-proyecto>/zones/us-central1-a/machineTypes/e2-micro
@@ -280,10 +280,10 @@ resources:
           #!/bin/bash
           sudo apt-get update
           sudo apt install python3-pip -y
-          sudo mkdir /labs
-          cd /labs
-          sudo git clone https://github.com/ISIS2503/ISIS2503-MonitoringApp.git
-          cd ISIS2503-MonitoringApp
+          sudo mkdir /asr
+          cd /asr
+          sudo git clone https://github.com/Leonardo3310/ASR-Disponibilidad
+          cd ASR-Disponibilidad
           sudo git checkout Circuit-Breaker
           sudo pip3 install -r requirements.txt
           sudo python3 manage.py makemigrations
